--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,16 @@
 body{
     background-color: #114555;
-    font-family: 'Pangolin', cursive;
+    font-family: 'Comic Neue', cursive;
 }
 ul{
     display:inline;
 }
 
 #titleBtn{
-    font-size: 20px;
+    font-size: 22px;
 }
 
 .board{
-    font-family: 'Comic Neue', cursive;
     color: #114555;
     font-size: 120px;
     border-radius: 20px;
@@ -72,6 +71,56 @@ ul{
     border-right:none;
 }
 
+.message, .about {
+    transition: 1s;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 5rem;
+    flex-direction: column;
+  }
+
+.message button {
+    font-size: 3rem;
+    padding: .25em .5em;
+  }
+
+.message .container{
+    max-width:600px;
+    background-color: #0b2a33;
+    border-radius: 10px;
+}
+
+.about .container{
+    font-family: 'Roboto', sans-serif;
+    padding-bottom:40px;
+    box-shadow: 0 0 6px 2px rgba(83, 83, 83, 0.8);
+    color:white;
+    max-width:600px;
+    background-color: #114555;
+    border-radius: 10px;
+}
+
+
+.about a{
+    transition: 1s;
+    text-decoration: none;
+    color:white;
+}
+.about a:hover{
+    color:black;
+}
+
+
+.winner-text{
+    text-decoration: underline;
+}
 
 /* temporary classes */
 .filled{
@@ -82,4 +131,14 @@ ul{
     color: #80cde5 !important;
 }
 
+#aboutCross{
+    float:right;
+    color:white;
+    font-size:20pt; 
+    
+    cursor: pointer;
+}
 
+#aboutCross:hover{
+    color: #80cde5;
+}
