--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ ul{
 }
 
 .board{
+    box-shadow: 0px 0px 10px 0px rgba(8,35,43,1);
     color: #114555;
     font-size: 120px;
     border-radius: 20px;
